# pybman

./: .dockerignore  .gitignore  AUFGABENBEWERTUNG_PUBMAN_EXPLORER.md  CHANGELOG.md  Dockerfile  Forschungsdaten_ctx_2213631_2024-heute.xlsx  MIGRATION.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: RESEARCH_DATA_DISCOVERY.md  RESEARCH_DATA_HUMAN_REVIEW.md
docs/source/: conf.py  index.rst  reference.rst
outputs/research_data_enrichment/: Forschungsdaten_2024-heute_3_Sheets_konsolidiert_geprueft.xlsx  Forschungsdaten_ctx_2213631_2024-heute.xlsx  Forschungsdaten_ctx_2213631_2024-heute_final_geprueft.xlsx  forschungsdaten_ctx_2213631_2024-heute.json
pybman/: __about__.py  __init__.py  _http.py  client.py  data.py  exceptions.py  extract.py  inspector.py  local.py  models.py  queries.py  query.py  utils.py
pybman/api/: __init__.py  _search.py  cone.py  contexts.py  feeds.py  items.py  ous.py  staging.py
pybman/discovery/: __init__.py  __main__.py  _client.py  aea.py  aggregator.py  b2find.py  crossref.py  datacite.py  europepmc.py  fulltext.py  google.py  identifiers.py  matching.py  models.py  openaire.py  orcid.py  osf.py  scholexplorer.py
tests/: conftest.py  test_apis.py  test_cambridge_osf_discovery.py  test_client.py  test_data.py  test_degruyter_browser_evidence.py  test_discovery_aggregator.py  test_discovery_cli.py  test_discovery_identifiers.py  test_discovery_live.py  test_discovery_providers.py  test_elife_data_discovery.py  test_extract.py  test_fulltext_data_discovery.py  test_github_data_discovery.py  test_github_doi_discovery.py  test_group_orcid_discovery.py  test_harvard_dataverse_discovery.py  test_huggingface_arxiv_discovery.py  test_informs_replication_discovery.py  test_inspector.py  test_items.py  test_live.py  test_openalex_fulltext_discovery.py  test_osf_exact_title_data_discovery.py  test_publication_version_discovery.py  test_pure_duplicate_files_discovery.py  test_queries.py  test_structured_supplement_discovery.py  test_transport.py  test_unpaywall_fulltext_discovery.py  test_utils_local.py  test_webapp_store.py  test_webapp_sync.py  test_wiley_browser_evidence_discovery.py  test_zenodo_replication_discovery.py
tools/research_data_enrichment/: audit_research_data_links.mjs  audited_research_data.json  build_enriched_workbook.mjs  create_final_research_data_table.mjs  create_three_sheet_research_data_report.mjs  degruyter_browser_observations.json  discover_by_group_orcid.py  discover_cambridge_osf_data.py  discover_degruyter_browser_evidence.py  discover_elife_data.py  discover_from_openalex_fulltext.py  discover_from_pure_fulltext.py  discover_from_unpaywall_fulltext.py  discover_github_data_repositories.py  discover_github_doi_repositories.py  discover_harvard_dataverse.py  discover_huggingface_arxiv_datasets.py  discover_informs_replication.py  discover_osf_exact_title_data.py  discover_publication_versions.py  discover_pure_duplicate_files.py  discover_structured_supplements.py  (+35 more)
webapp/: __init__.py  app.py  config.py  store.py  sync.py  wsgi.py
(+12 files in other folders)
